@@ -1,4 +1,5 @@
 [1.10.1]
+- [BREAKING CHANGE] Android Moved natives loading out of static init block, see #5795
 - API Addition: ObjLoader now supports ambientColor, ambientTexture, transparencyTexture, specularTexture and shininessTexture
 - API Addition: PointSpriteParticleBatch blending is now configurable.
 - TOOLS Features: Blending mode and sort mode can be changed in Flame particle 3D editor.
